# PRISM

./: .gitignore  GETTING_STARTED.md  PRISM_ARCHITECTURE_SPEC.md  README.md  demo_patients.json
Hack-Nation/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_REGISTRY.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  MODEL_CARD.md  Makefile  README.md  SECURITY.md  TRAINING.md  conftest.py  fly.toml  mkdocs.yml  pyproject.toml
Hack-Nation/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
Hack-Nation/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_request.yml  documentation.yml  model_experiment.yml
Hack-Nation/.github/workflows/: ci.yml  data-contracts.yml  docs.yml  model-smoke-tests.yml  release.yml
Hack-Nation/.ipynb_checkpoints/: README-checkpoint.md
Hack-Nation/apps/api/: demo_patients.py  deps.py  main.py  registry.py
Hack-Nation/configs/: base.yaml
Hack-Nation/container/: prism.def
Hack-Nation/docs/: API_CONTRACT.md  MCPHASES_DATA_AUDIT.md  TEMPORAL_MODEL_AUDIT.md  ULTRASOUND_DATA_AUDIT.md  contracts.md  contributing.md  index.md  model_cards.md  openapi.yaml  quickstart.md
Hack-Nation/evaluation/: calibration.py  classification.py  clustering.py  documents.py  reports.py  speech.py  stability.py  subgroup.py  temporal.py  ultrasound.py
Hack-Nation/event_store/: conflict_resolution.py  provenance.py  queries.py  serialization.py  store.py
Hack-Nation/features/: feature_manifest.py  missingness.py  phenotype_domains.py  static_features.py
Hack-Nation/inference/: __init__.py  disagreement.py  domain_mapper.py  encoder_registry.py  evidence_coordinator.py  orchestrator.py  patient_bundle.py  report_schema.py
Hack-Nation/ingestion/: base.py
Hack-Nation/logs/: us_encoder_1832700.out
Hack-Nation/models/: base.py
Hack-Nation/registry/: datasets.yaml  loader.py  phenotype_domains.yaml  schema_versions.yaml  units.yaml  variables.yaml
Hack-Nation/schemas/: __init__.py  dataset.py  event.py  evidence.py  imaging.py  modality_token.py  model_output.py  patient.py  phenotype.py  temporal.py
Hack-Nation/scripts/: _cli.py  _experiment_io.py  benchmark_temporal.py  build_cohort_table.py  build_model_card.py  build_speech_eval_set.py  consolidate_mcphases.py  discover_phenotypes.py  evaluate_document_pipeline.py  evaluate_speech_pipeline.py  evaluate_ultrasound_encoder.py  export_openapi.py  generate_demo_fixtures.py  generate_frontend_types.py  generate_release_notes.py  prepare_mcphases.py  prepare_pcos_tabular.py  prepare_pmos_tabular.py  prepare_ultrasound.py  run_stability_analysis.py  train_static_baselines.py  train_static_encoder.py  train_tabular_autoencoder.py  train_temporal.py  train_temporal_state_encoder.py  train_ultrasound.py  train_ultrasound_encoder.py  update_repo_docs.py  validate_phenotype_profiles.py  validate_registry.py
Hack-Nation/slurm/: README.md  prism.env  smoke.sbatch  stability_sweep.sbatch  train_static.sbatch  train_temporal.sbatch  train_ultrasound.sbatch  train_ultrasound_2d_cpu.sbatch  train_ultrasound_encoder.sbatch
Hack-Nation/training/: callbacks.py  checkpoints.py  engine.py  logging.py  seeding.py  splits.py  tracking.py
(+716 files in other folders)
