[project]
name = "prism-hormonal-health"
version = "0.1.0"
description = "PRISM: Personalized Reproductive and Integrated Systemic Model — a modular, condition-agnostic hormonal-health modeling pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PRISM contributors" }]
keywords = ["hormonal-health", "pcos", "multimodal", "provenance", "research"]

dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
tabular = ["xgboost>=2.0"]
torch = ["torch>=2.2"]
speech = ["jiwer>=3.0"]
documents = ["pdfplumber>=0.11"]
imaging = ["pydicom>=2.4", "scikit-image>=0.22"]
recommendations = [
    "httpx>=0.27",        # already a dev dep; listed here so the extra is self-contained
    # No other packages needed: Tavily and Groq are called via plain HTTP.
    # pip install -e ".[recommendations]"   then set TAVILY_API_KEY + LLM_API_KEY.
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    # Required by fastapi.testclient.TestClient, which the API tests use to
    # exercise the real routes against real loaded encoders.
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "schemas",
    "ingestion",
    "event_store",
    "features",
    "models",
    "training",
    "evaluation",
    # Importable from the repo root but previously unpackaged, so a wheel build
    # produced an install that could not run the orchestrator or the API.
    "inference",
    "registry",
    "apps",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["N803", "N806", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
# Pinning 3.11 here makes numpy's bundled stubs unparseable ("Type statement is
# only supported in Python 3.12 and greater"), which aborts the whole run before
# any project file is checked. Left unset, mypy targets the running interpreter,
# which is what we actually want — the runtime floor is still enforced by
# requires-python and by the 3.11 leg of the CI test matrix.
ignore_missing_imports = true
# On: a stale ``type: ignore`` is a claim about the code that is no longer true,
# and the run above is only trustworthy if those are pruned as they go dead.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
# Deliberately off: turning this on is a separate, much larger project.
disallow_untyped_defs = false
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "smoke: tiny synthetic end-to-end checks, never scientific results",
    "integration: multi-module checks on synthetic fixtures",
    "contract: schema and registry contract checks",
]
